<resources>
    <string name="app_name">AppMenu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="primer_plat">Primer Plat</string>
    <string name="macarrons">Macarrons</string>
    <string name="primerplat">PrimerPlat</string>
    <string name="quantitat">Quantitat</string>
    <string name="_1">1</string>
    <string name="_10">10€</string>
    <string name="cocacola">CocaCola</string>
    <string name="beguda">Beguda</string>
    <string name="_3">3€</string>
    <string name="total">Total:</string>
    <string name="_1r_plat">1r Plat:</string>
</resources>