<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlatFragment">

        <EditText
            android:id="@+id/editText1Plat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ems="10"
            android:hint="@string/macarrons"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextQuantitat"
            android:layout_width="100dp"
            android:layout_height="41dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/_1"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="140dp"
            android:text="@string/primer_plat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:text="@string/quantitat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText1Plat" />

        <TextView
            android:id="@+id/textViewPreu"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="60dp"
            android:text="@string/_10"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/editTextQuantitat"
            app:layout_constraintTop_toBottomOf="@+id/editText1Plat" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="78dp"
            android:layout_height="79dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPreu"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>