<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BegudaFragment">

        <EditText
            android:id="@+id/editTextBeguda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="27dp"
            android:ems="10"
            android:hint="@string/cocacola"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextQuantitat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="68dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="464dp"
            android:ems="10"
            android:hint="@string/_1"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewPreu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="101dp"
            android:text="@string/beguda"
            app:layout_constraintBottom_toTopOf="@+id/editTextBeguda"
            app:layout_constraintStart_toStartOf="@+id/editTextBeguda"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/quantitat"
            app:layout_constraintBottom_toTopOf="@+id/editTextQuantitat"
            app:layout_constraintStart_toStartOf="@+id/editTextQuantitat"
            app:layout_constraintTop_toBottomOf="@+id/editTextBeguda" />

        <TextView
            android:id="@+id/textViewPreu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="214dp"
            android:layout_marginEnd="82dp"
            android:layout_marginBottom="31dp"
            android:text="@string/_3"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextQuantitat"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="62dp"
            android:layout_height="0dp"
            android:layout_marginBottom="380dp"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewPreu"
            app:layout_constraintTop_toBottomOf="@+id/textViewPreu"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>