<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PagarFragment">

        <TextView
            android:id="@+id/textViewTotalTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="a"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/textViewTotalBeguda"
            app:layout_constraintTop_toBottomOf="@+id/textViewTotalBeguda" />

        <TextView
            android:id="@+id/textViewPreu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="25sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewTotalTotal"
            app:layout_constraintStart_toStartOf="@+id/textViewBeguda" />

        <TextView
            android:id="@+id/textViewTitol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="119dp"
            android:text="@string/total"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTotalBeguda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="a"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/textViewTotal1rPlat"
            app:layout_constraintTop_toBottomOf="@+id/textViewTotal1rPlat" />

        <TextView
            android:id="@+id/textView1rPlat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="71dp"
            android:text="@string/_1r_plat"
            android:textSize="25sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewTotal1rPlat"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitol" />

        <TextView
            android:id="@+id/textViewBeguda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beguda"
            android:textSize="25sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewTotalBeguda"
            app:layout_constraintStart_toStartOf="@+id/textView1rPlat" />

        <TextView
            android:id="@+id/textViewTotal1rPlat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="54dp"
            android:text="a"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/textViewBeguda"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitol" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>